@@ -1,3 +1,8 @@
+2009-06-16  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-placement.lisp (*-child-placement): Adjust
+	coordinates to one pixel in the current child.
+
 2009-06-04  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-query.lisp (query-enter-function): Assign font before
